--- a/styles/index.css
+++ b/styles/index.css
@@ -20,6 +20,12 @@
     }
   }
 
+/* index hero image */
+.container_image {
+  height: 500px; /*Set any dimensions you like*/
+  width: 900px;
+}
+
 /* style links added by rehype-autolink-headings, see svelte.config.js */
 /* https://github.com/janosh/svelte-toc/blob/8493df334a11661eddf03434372f6cd71ea313c1/site/static/global.css */
 :where(h2, h3, h4, h5, h6) a {
